# agent_knowledge_middleware

./: .clinerules  Cargo.toml  README.md
doc/: long-term-storage.md  vector-model.md
src/: config.rs  main.rs  models.rs
src/api/: logs.rs  mod.rs
src/services/: ai_processor.rs  memory_compiler.rs  memory_janitor.rs  mod.rs  slot_manager.rs
src/workers/: janitor_worker.rs  mod.rs  timeout_monitor.rs
tests/: integration_test.rs  long_term_memory_test.rs
